# slacgs

./: .buildinfo  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONSOLE_OUTPUT_DESIGN.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  TASKS.md  coinfosim.code-workspace  coinfosim.toml.example  coinfosim_research_proposal_v3.tex  coinfosim_research_proposal_v4.tex  cosensim.toml.example  experiment.py  genindex.html  gspread_client.py  index.html  model.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  report.py  report_tasks.md  requirements.txt  search.html  searchindex.js  setup.py  sim.py  simulator.py  slacgs.toml.example  tasks.md  test.py  test_scenarios.json
.github/: copilot-instructions.md
_sources/: modules.rst.txt
data/: README.md
demo_scripts/: run_experiment.py  run_make_scenario_reports.py  run_make_simulation_report.py  run_simulation.py
docs/: CONFIG_DESIGN.md  README.md  rebuild_doc.sh  rebuld_doc.bat
experiments/: README.md
output/: simulation_reports.json  simulation_reports_test.json
reports/: scenario_1_report.html  scenario_2_report.html  scenario_3_report.html  scenario_5_report.html  scenario_7_report.html  sim_report_14[1, 1, 1, -0.1, 0.3, 0.3][test].html  sim_report_14[1, 1, 5.0, 0, 0, 0].html  sim_report_15[1, 1, 1, -0.1, 0.3, 0.3][test].html  sim_report_16[1, 1, 1, -0.1, 0.3, 0.3][test].html  sim_report_16[1, 1, 7, 0, 0, 0].html  sim_report_17[1, 1, 1, -0.1, 0.3, 0.3][test].html  sim_report_18[1, 1, 1, -0.1, 0.3, 0.3][test].html  sim_report_19[1, 1, 10, 0, 0, 0].html  sim_report_65[1, 1, 0].html  (+31 more)
(+1297 files in other folders)
