[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosensim"
version = "0.1.0"
description = "CoSenSim: simulator for evaluating cooperative advantage in sensor networks"
authors = [ { name = "Your Name", email = "you@example.edu" } ]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "pandas",
]
